# iroh-http

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE.md  SECURITY.md  TEST_PLAN.md  deno.json  deny.toml  index.html  package-lock.json  package.json  plan.md
.cargo/: audit.toml  config.toml
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/prompts/: Evaluation.prompt.md
.github/workflows/: bench.yml  build.yml  ci.yml  extended-tests.yml  fuzz.yml  publish.yml  release.yml
bench/deno/: bench-ffi-encoding.ts  bench.ts  latency.bench.ts  report.ts  throughput.bench.ts
bench/node/: bench-bridge.mjs  bench-shared-layer.mjs  bench.mjs  latency.mjs  report.mjs  throughput.mjs
bench/scripts/: normalize-criterion-json.mjs
crates/iroh-http-adapter/: Cargo.toml  README.md
crates/iroh-http-adapter/src/: lib.rs
crates/iroh-http-core/: Cargo.toml  README.md  clippy.toml
crates/iroh-http-core/benches/: channel.rs  latency.rs  throughput.rs
crates/iroh-http-core/fuzz/: Cargo.toml
crates/iroh-http-core/fuzz/corpus/fuzz_respond/: one_header  status_200_no_headers
crates/iroh-http-core/fuzz/fuzz_targets/: handle_store.rs  parse_node_addr.rs  respond.rs
crates/iroh-http-core/src/: body.rs  client.rs  compress.rs  config.rs  endpoint.rs  events.rs  io.rs  lib.rs  pool.rs  qpack_bridge.rs  registry.rs  server.rs  server_pipeline.rs  session.rs  stats.rs  stream.rs
crates/iroh-http-core/src/endpoint/: bind.rs  config.rs  ffi_bridge.rs  http_runtime.rs  lifecycle.rs  mod.rs  observe.rs  session_runtime.rs  stats.rs  transport.rs
crates/iroh-http-core/src/ffi/: dispatcher.rs  fetch.rs  handles.rs  mod.rs  pumps.rs  registry.rs  session.rs  types.rs
crates/iroh-http-core/src/http/: body.rs  client.rs  mod.rs
crates/iroh-http-core/src/http/server/: accept.rs  error_layer.rs  handle.rs  lifecycle.rs  mod.rs  options.rs  pipeline.rs  stack.rs
crates/iroh-http-core/src/http/transport/: mod.rs
crates/iroh-http-core/tests/: architecture.rs  bidi_stream.rs  diag_timeout.rs  endpoint.rs  http_basic.rs  http_errors.rs  http_limits.rs  http_pool.rs  http_pure_fetch.rs  http_pure_service.rs  http_request_decompression.rs  http_shutdown.rs  http_stack_knobs.rs  integration.rs  property.rs  session_webtransport.rs  sign_verify.rs  ticket.rs
crates/iroh-http-core/tests/common/: mod.rs
crates/iroh-http-discovery/: Cargo.toml  README.md
crates/iroh-http-discovery/src/: lib.rs
crates/iroh-http-framing/: Cargo.toml  README.md
docs/: 01_patch.md  02_patch.md  03_patch.md  README.md  api-overview.md  architecture.md  brief.md  build-and-test.md  embedded-roadmap.md  guidelines-javascript.md  guidelines-python.md  guidelines-rust.md  guidelines-tauri.md  guidelines.md  patch.md  principles.md  protocol.md  roadmap.md  specification.md  threat-model.md  troubleshooting.md  tuning.md
docs/adr/: 001-peer-identity-in-api.md  002-capability-url-system.md  003-hole-punching-connectivity.md  004-offline-intermittent-connectivity.md  005-ffi-versioning-compatibility.md  006-project-nature-in-ecosystem.md  007-cross-runtime-test-strategy.md  008-adversarial-peer-threat-model.md  009-ffi-bridge-reliability.md  010-ci-pipeline-stabilisation.md  011-api-surface-audit.md  012-benchmark-infrastructure.md  013-lean-on-the-ecosystem.md  014-runtime-architecture.md  _template.md
docs/explorations/: 001-peer-identity-in-api.md  002-capability-url-system.md  003-hole-punching-connectivity.md  004-offline-intermittent-connectivity.md  005-ffi-versioning-compatibility.md  006-project-nature-in-ecosystem.md  007-cross-runtime-test-strategy.md  008-adversarial-peer-threat-model.md  _template.md
docs/features/: README.md  compression.md  default-headers.md  discovery.md  observability.md  rate-limiting.md  server-limits.md  sign-verify.md  streaming.md  tickets.md  trailer-headers.md  webtransport.md
docs/guidelines/: README.md  javascript.md  python.md  rust.md  tauri.md
docs/internals/: README.md  connection-pool.md  core-assessment-2026-04.md  design-decisions.md  http-engine.md  resource-handles.md  wire-format.md
docs/patches/: 00_brief.md  05_patch.md  06_patch.md  07_patch.md  08_patch.md  09_patch.md  10_patch.md  11_patch.md  12_patch.md  13_patch.md  14_patch.md  15_patch.md  16_patch.md
docs/recipes/: README.md  append-only-log.md  capability-advertisement.md  capability-attenuation.md  capability-tokens.md  content-routing.md  cooperative-backup.md  device-handoff.md  ecosystem.md  group-messaging.md  http-gateway.md  job-dispatch.md  key-rotation.md  local-first-sync.md  middleware.md  multi-device-identity.md  named-nodes.md  offline-first.md  peer-exchange.md  peer-fallback.md  presence.md  proximity-trust.md  release-channels.md  reverse-ingress.md  schema-negotiation.md  sealed-messages.md  signed-caching.md  threshold-custody.md  witness-receipts.md
docs/reviews/: 01_review.md  02_review.md  03_review.md
examples/deno/: deno.jsonc  main.ts
examples/node/: index.ts  package-lock.json  package.json
examples/python/: main.py  requirements.txt
issues/: A-ISS-034.md  A-ISS-035.md  A-ISS-036.md  A-ISS-037.md  A-ISS-038.md  A-ISS-039.md  A-ISS-040.md  A-ISS-041.md  A-ISS-042.md  A-ISS-043.md  A-ISS-046.md  A-ISS-048.md  A-ISS-049.md  A-ISS-050.md  A-ISS-051.md  B-040.md  B-ISS-040.md  B-ISS-041.md  B-ISS-042.md  B-ISS-043.md  B-ISS-044.md  B-ISS-045.md  B-ISS-046.md  B-ISS-047.md  B-ISS-048.md  BUG-001.md  BUG-002.md  BUG-003.md  DENO-001.md  DENO-002.md  DENO-003.md  DENO-004.md  DENO-005.md  DENO-006.md  DENO-007.md  DENO-008.md  DRIFT-A.md  DRIFT-B.md  DRIFT-C.md  ISS-001.md  (+88 more)
reviews/: 00_review.md  2026-04-30-post-rework-review.md
scripts/: README.md  build-core.sh  build-deno.sh  build-node.sh  build-python.sh  build-tauri.sh  build-ts.sh  build.sh  check-lockfile.mjs  check.sh  release.sh  version.sh
temp/: ARCHITECTURE.md  PRINCIPLES.md
tests/: README.md  harness.mjs  run-all.sh
workspace/: notes.md  release_plan.md
(+241 files in other folders)
