[workspace]
resolver = "2"
members = [
    "crates/iroh-http-framing",
    "crates/iroh-http-core",
    "crates/iroh-http-discovery",
    "packages/iroh-http-node",
]

[workspace.dependencies]
iroh = { version = "0.96.1" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util"] }
bytes = "1"
slab = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
