[package]
name = "iroh-http-core"
version = "0.1.0"
edition = "2021"
description = "Iroh QUIC endpoint, HTTP/1.1 over hyper, fetch/serve with FFI-friendly types"
license = "MIT OR Apache-2.0"

[features]
default = []
compression = [
    "tower-http/compression-zstd",
    "tower-http/decompression-zstd",
]

[dependencies]
iroh = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
slab = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
moka = { workspace = true }
slotmap = { workspace = true }
futures = { workspace = true }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
rand = "0.9"
base32 = "0.5"
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "test-util"] }
bytes = { workspace = true }
