[package]
name = "iroh-http-core"
version = "0.1.3"
edition = "2021"
description = "Iroh QUIC endpoint, HTTP/1.1 over hyper, fetch/serve with FFI-friendly types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/momics/iroh-http"
documentation = "https://docs.rs/iroh-http-core"
keywords = ["iroh", "p2p", "quic", "http", "peer-to-peer"]
categories = ["network-programming", "web-programming::http-client", "web-programming::http-server"]

[features]
default = []
compression = [
    "tower-http/compression-zstd",
    "tower-http/decompression-zstd",
]

[dependencies]
iroh = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
slab = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
moka = { workspace = true }
slotmap = { workspace = true }
futures = { workspace = true }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
rand = "0.9"
base32 = "0.5"
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "test-util"] }
bytes = { workspace = true }
proptest = "1"
serde_json = "1"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false
