[package]
name = "iroh-http-core"
version.workspace = true
edition.workspace = true
description = "Iroh QUIC endpoint, HTTP/1.1 over hyper, fetch/serve with FFI-friendly types"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/iroh-http-core"
keywords = ["iroh", "p2p", "quic", "http", "peer-to-peer"]
categories = ["network-programming", "web-programming::http-client", "web-programming::http-server"]

[features]
default = ["compression"]
compression = [
    "tower-http/compression-zstd",
    "tower-http/decompression-zstd",
]

[dependencies]
iroh = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["limit", "map-response-body"] }
moka = { workspace = true }
slotmap = { workspace = true }
futures = { workspace = true }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
rand = "0.10"
base32 = "0.5"
pin-project-lite = "0.2"
dashmap = "6"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "test-util"] }
bytes = { workspace = true }
proptest = "1"
serde_json = "1"
criterion = { version = "0.8", features = ["async_tokio"] }
futures = "0.3"
zstd = "0.13"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false
